SERVER-16753 fix shutdown log messages to be component CONTROL